...
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/cogIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="Settings Cog Icon"
...
        android:layout_gravity="center"
        android:src="@drawable/dblogo"
        android:contentDescription="DB Logo" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:hint="Enter User Name"
        android:inputType="textEmailAddress"
        android:contentDescription="Enter Email Address" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:contentDescription="Enter Password" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="L o g i n"
        android:textColor="#fff"
        android:textSize="16sp"
        android:contentDescription="Login Button" />

    <!-- Register Text -->
    <TextView
        android:id="@+id/registerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
