...
                android:id="@+id/action_atm_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_gps_fixed_24"
                android:layout_marginStart="16dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="Location by GPS" />

            <TextView
                android:id="@+id/atmSearchLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ATM Location - GPS"
...
