<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="379dp"
            android:layout_height="433dp">

        </FrameLayout>

        <TextView
                    android:id="@+id/textViewConstant1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Digital Bank URL:" />

                <EditText
                    android:id="@+id/editTextBaseUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewConstant1"
                    android:layout_marginTop="16dp"
                    android:text="BASE_URL: YourBaseURLHere"
                    android:contentDescription="Enter Digital Bank URL" />



                <TextView
                    android:id="@+id/textViewConstant2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextBaseUrl"
                    android:layout_marginTop="16dp"
                    android:text="Mock URL:" />

                <EditText
                    android:id="@+id/editTextMockUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewConstant2"
                    android:layout_marginTop="16dp"
                    android:text="MOCK_URL: YourMockURLHere"
                    android:contentDescription="Enter URL for ATM Mock Service " />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resetBtn"
                    android:layout_marginTop="16dp"
                    android:text="Cancel"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:contentDescription="Cancel" />

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextMockUrl"
                    android:layout_marginTop="16dp"
                    android:text="Save Changes"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:contentDescription="Save" />

        <EditText
            android:id="@+id/ConfigDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveBtn"
            android:layout_marginTop="16dp"
            android:text=" The configuration screen is only required when using a custom Digital Bank host / Mock service. These settings do not normally need to be changed."
            android:contentDescription="Note:  The configuration screen can be used to use a custom Digital Bank host and or Mock service. These settings do not normally need to be changed." />

        <Button
            android:id="@+id/restartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ConfigDescription"
            android:layout_marginTop="16dp"
            android:text="Apply Change"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp"
            android:contentDescription="Restart" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restartBtn"
            android:layout_marginTop="16dp"
            android:text="Reset To Default"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp"
            android:contentDescription="Reset" />
</RelativeLayout>
